# realm-java

realm/: build.gradle  settings.gradle
realm/realm-library/: build.gradle
realm/realm-library/src/main/cpp/: CMakeLists.txt
